deploying again, fixed scrollbar issues

--- a/css/input.css
+++ b/css/input.css
@@ -28,7 +28,7 @@
         @apply content-[''] bg-white h-[3px] w-[100%] left-0 -bottom-[5px] absolute
     }
 
-    @layer utilities responsive {
+    @variants responsive{
         /* Hide scrollbar for Chrome, Safari, and Opera */
         .no-scrollbar::-webkit-scrollbar {
             display: none;
